@@ -4,7 +4,7 @@ Priority: standard
 Maintainer: Debian GCC Maintainers <debian-gcc@lists.debian.org>
 Uploaders: Matthias Klose <doko@debian.org>, Arthur Loiret <aloiret@debian.org>
 Standards-Version: 3.8.1
-Build-Depends: m4, debhelper (>= 5), dpkg-dev (>= 1.13.9), gcj-4.4-base (>= 4.4.0-0) [!arm !sh3 !sh4], gcc-4.2-base (>= 4.2.4-1), gcc-4.3-base (>= 4.3.3-2), lsb-release
+Build-Depends: m4, debhelper (>= 5), dpkg-dev (>= 1.13.9), gcj-4.4-base (>= 4.4.2-2) [!arm], gcc-4.3-base (>= 4.3.4-1), lsb-release
 Build-Depends-Indep: ca-certificates, gcj-jdk | java-gcj-compat-dev, python, python-central
 XS-Python-Version: all
 
